--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
           <a
             class="btn text-white btn-floating m-1"
             style="background-color: #3b5998;"
-            href="#!"
+            href="https://www.facebook.com/danielalejandro.prietogallani/"
             role="button"
             ><i class="bi bi-facebook"></i
           ></a>
@@ -233,25 +233,16 @@
           <a
             class="btn text-white btn-floating m-1"
             style="background-color: #55acee;"
-            href="#!"
+            href="https://twitter.com/daniel_A_prieto"
             role="button"
             ><i class="bi bi-twitter"></i
-          ></a>
-    
-          <!-- Google -->
-          <a
-            class="btn text-white btn-floating m-1"
-            style="background-color: #dd4b39;"
-            href="#!"
-            role="button"
-            ><i class="bi bi-google"></i
           ></a>
     
           <!-- Instagram -->
           <a
             class="btn text-white btn-floating m-1"
             style="background-color: #ac2bac;"
-            href="#!"
+            href="https://www.instagram.com/_danielprieto/"
             role="button"
             ><i class="bi bi-instagram"></i
           ></a>
